# cora

./: Cora.ipynb  Cora_1_0_1.ipynb  LICENSE.md  README.md  cora_package.ipynb  data_mining_cora.py  draft_cubes.py  pyproject.toml  setup.py  skript.py  test_multioutput.py
.github/workflows/: coverage.yml  python-package.yml
cora/: __init__.py  data_mining_cora.py  dictionary, which  draft_cubes.py  essential.py  multiply.py  on_off_alg.py  on_off_mo_alg.py  petric.py  preprocess_data.py  prime_implicants.py
examples/: GrossCarvin2011.csv  McCluskeyF1F2.csv  SwissMinaret.csv  bergschlosser_2008_MV_3Out.csv  example1.py  example2.py  example3.py  example4.py
paper/: paper.bib  paper.md
tests/: test_coverages.py  test_data_miming.py  test_implicants.py  test_inclusion_scores.py  test_multi_value_output.py  test_on_dc_alg.py  test_petric.py  test_preprocessing.py  tests_cubes.py
tests/data/: amenta_elliot_2017_5_causes_cs.csv  ansorg_2014.csv  data_mining_tests.csv  new_data_cov.csv  testdata1.csv
tests/data/Multi_output/: data2.csv  data3.csv  data4.csv  data5.csv  data6.csv
tests/data/One_output/: data1.csv  data2.csv  data3.csv  data4.csv  data5.csv
