[tool.poetry]
name = "cora"
version = "0.1.1"
description = "Boolean minimization algorithms library"
authors = ["Zuzana Sebechlebská <zuzanasebechlebska@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
nativepetric = {git = "https://github.com/PoliUniLu/petric.git"}
numpy = "==1.21.2"
pandas = "==1.3.4"

[tool.poetry.dev-dependencies]
parameterized = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
