[tool.poetry]
name = "cora"
version = "1.0.0"
description = "Boolean minimization algorithms library"
authors = ["Zuzana Sebechlebská <zuzanasebechlebska@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
nativepetric = {git = "https://github.com/PoliUniLu/petric.git"}
numpy = "==1.22"
pandas = "==1.5.3"

[tool.poetry.dev-dependencies]
parameterized = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
