[tool.poetry]
name = "cora"
version = "1.0.1"
description = "Boolean minimization algorithms library"
authors = ["Zuzana Sebechlebská <zuzanasebechlebska@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
nativepetric = {git = "https://github.com/PoliUniLu/petric.git"}
numpy = ">=1.22"
pandas = ">=1.5.3"

[tool.poetry.group.dev.dependencies]
parameterized = "^0.8.1"
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
